--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ci-review-coding-challenge-1",
   "version": "1.0.0",
+  "homepage": "https://MonLipit.github.io/deploy_todolist",
   "description": "",
   "keywords": [],
   "main": "src/index.js",
